--- a/index.html
+++ b/index.html
@@ -163,11 +163,40 @@
             class="kaufman__triangle"
           >
       </section>
-
     </main>
-    <footer class="footer">
 
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyrigh">
+          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Яндекс Практикум">
+          <p class="footer__author">&copy; Alice Gafurova</p>
+        </div>
+        <div class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
+          <nav>
+            <ul class="footer__column-links">
+              <li><a href="#" class="footer__column-link" target="_blank">Главная</a></li>
+              <li><a href="#" class="footer__column-link" target="_blank">Концепция</a></li>
+              <li><a href="#" class="footer__column-link" target="_blank">Наставники</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <nav>
+            <ul class="footer__column-links">
+              <li><a href="#" class="footer__column-link" target="_blank"><img class="footer__social-icon"
+                    src="./images/youtube-icon.svg" alt="Youtube">Youtube</a></li>
+              <li><a href="#" class="footer__column-link" target="_blank"><img class="footer__social-icon"
+                    src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a></li>
+              <li><a href="#" class="footer__column-link" target="_blank"><img class="footer__social-icon"
+                    src="./images/tiktok-icon.svg" alt="TikTok">TikTok</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </footer>
+
   </div>
   
 </body>
