--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="./styles/normalize.css">
 <link rel="stylesheet" href="./styles/style.css">
 <!DOCTYPE html>
 <html lang="ru">
