--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,11 +14,12 @@
     <header class="header">
       <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Лого Яндекс Практикум" />
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие совеременные и эффективные подходы к обучению вы можете использовать
-        в своей жизни?
-        <a class="link" href="#">Узнать &rarr;</a></p>
-        <img class="header__main-illustration" src = "./images/header-image.png" alt = "two_again">
-        <div class="header__square-pic"></div>
+      <p class="header__subtitle">
+        Какие совеременные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a class="link" href="#">Узнать &rarr;</a>
+      </p>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="two_again">
+      <div class="header__square-pic"></div>
     </header>
 
     <main class="content">
@@ -53,7 +55,8 @@
           <div class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">
-              Число нейронов в мозге человека</p>
+              Число нейронов в мозге человека
+            </p>
           </div>
           <div class="table__cell">
             <h3 class="table__heading">2.1 миллиарда</h3>
@@ -94,7 +97,6 @@
             <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
-        </div>
       </section>
 
       <section class="feynman">
@@ -113,7 +115,8 @@
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">
-              Выберите привлекательный проект.</p>
+              Выберите привлекательный проект.
+            </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">2</h3>
@@ -139,30 +142,36 @@
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">6</h3>
-            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+            <p class="table__text table__text_theme_dark">
+              Устраните препятствия для занятий.
+            </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">7</h3>
-            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+            <p class="table__text table__text_theme_dark">
+              Выделите специальное время для занятий.
+            </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">8</h3>
-            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+            <p class="table__text table__text_theme_dark">
+              Создайте быстрые петли обратной связи.
+            </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">9</h3>
-            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <p class="table__text table__text_theme_dark">
+              Занимайтесь по расписанию, короткими интенсивными интервалами.
+            </p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">10</h3>
-            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+            <p class="table__text table__text_theme_dark">
+              Уделяйте внимание количеству и скорости.
+            </p>
           </div>
         </div>
-        <img
-            src="./images/kaufman-triangle.svg"
-            alt="Синий Треугольник"
-            class="kaufman__triangle"
-          >
+        <img src="./images/kaufman-triangle.svg" alt="Синий Треугольник" class="kaufman__triangle">
       </section>
     </main>
 
@@ -172,33 +181,30 @@
           <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Яндекс Практикум">
           <p class="footer__author">&copy; Alice Gafurova</p>
         </div>
-        <div class="footer__column footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
-          <nav>
-            <ul class="footer__column-links">
-              <li><a href="#" class="footer__column-link" target="_blank">Главная</a></li>
-              <li><a href="#" class="footer__column-link" target="_blank">Концепция</a></li>
-              <li><a href="#" class="footer__column-link" target="_blank">Наставники</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div class="footer__column footer__column_content_social">
+          <ul class="footer__column-links">
+            <li><a href="#" class="footer__column-link" target="_blank">Главная</a></li>
+            <li><a href="#" class="footer__column-link" target="_blank">Концепция</a></li>
+            <li><a href="#" class="footer__column-link" target="_blank">Наставники</a></li>
+          </ul>
+        </nav>
+        <nav class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
-          <nav>
-            <ul class="footer__column-links">
-              <li><a href="#" class="footer__column-link" target="_blank"><img class="footer__social-icon"
-                    src="./images/youtube-icon.svg" alt="Youtube">Youtube</a></li>
-              <li><a href="#" class="footer__column-link" target="_blank"><img class="footer__social-icon"
+          <ul class="footer__column-links">
+            <li><a href="#" class="footer__column-link" target="_blank"><img class="footer__social-icon"
+                src="./images/youtube-icon.svg" alt="Youtube">Youtube</a></li>
+            <li><a href="#" class="footer__column-link" target="_blank"><img class="footer__social-icon"
                     src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a></li>
-              <li><a href="#" class="footer__column-link" target="_blank"><img class="footer__social-icon"
+            <li><a href="#" class="footer__column-link" target="_blank"><img class="footer__social-icon"
                     src="./images/tiktok-icon.svg" alt="TikTok">TikTok</a></li>
-            </ul>
-          </nav>
-        </div>
+          </ul>
+        </nav>
       </div>
     </footer>
-
   </div>
-  
 </body>
+
 </html>
+
+ 
