--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="vendor/normalize.css">
   <link rel="stylesheet" href="pages/index.css">
 </head>
 
@@ -20,7 +19,7 @@
         <a class="link" href="#">Узнать &rarr;</a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="two_again">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
@@ -250,13 +249,41 @@
             </p>
           </div>
         </div>
-        <img src="./images/kaufman-triangle.svg" alt="Синий Треугольник" class="kaufman__triangle">
+        <img src="./images/kaufman-triangle.svg rotation" alt="Синий Треугольник" class="kaufman__triangle">
       </section>
+
+      <div class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone">
+          <li>
+            <a class="resources__link link" href="#">
+              <img class="resources__logo" src="./images/resources-arzamas.svg" alt="Логотип Arzamas">
+            </a>
+          </li>
+          <li>
+            <a class="resources__link link" href="#">
+              <img class="resources__logo" src="./images/resources-n1.svg" alt="Логотип N1">
+            </a>
+          </li>
+          <li>
+            <a class="resources__link link" href="#">
+              <img class="resources__logo" src="./images/resources-strelka.svg" alt="Логотип Strelka">
+            </a>
+          </li>
+          <li>
+            <a class="resources__link link" href="#">
+              <img class="resources__logo" src="./images/resources-polka.svg" alt="Логотип Polka">
+            </a>
+          </li>
+        </ul>
+      </div>
+
     </main>
 
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column footer__column_content_copyrigh">
+        <div class="footer__column footer__column_content_copyright">
           <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Яндекс Практикум">
           <p class="footer__author">&copy; Alice Gafurova</p>
         </div>
