--- a/index.html
+++ b/index.html
@@ -249,35 +249,19 @@
             </p>
           </div>
         </div>
-        <img src="./images/kaufman-triangle.svg rotation" alt="Синий Треугольник" class="kaufman__triangle">
+        <img src="./images/kaufman-triangle.svg" alt="Синий Треугольник" class="kaufman__triangle rotation">
       </section>
 
-      <div class="resources">
+      <section class="resourses">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <ul class="resources__logo-zone">
-          <li>
-            <a class="resources__link link" href="#">
-              <img class="resources__logo" src="./images/resources-arzamas.svg" alt="Логотип Arzamas">
-            </a>
-          </li>
-          <li>
-            <a class="resources__link link" href="#">
-              <img class="resources__logo" src="./images/resources-n1.svg" alt="Логотип N1">
-            </a>
-          </li>
-          <li>
-            <a class="resources__link link" href="#">
-              <img class="resources__logo" src="./images/resources-strelka.svg" alt="Логотип Strelka">
-            </a>
-          </li>
-          <li>
-            <a class="resources__link link" href="#">
-              <img class="resources__logo" src="./images/resources-polka.svg" alt="Логотип Polka">
-            </a>
-          </li>
-        </ul>
-      </div>
+        <div class="resourses__logo-zone">
+          <img class="resourses__logo" src="images/logo/resources-arzamas.svg" alt="арзамас">
+          <img class="resourses__logo" src="images/logo/resources-n1.svg" alt="н1">
+          <img class="resourses__logo" src="images/logo/resources-strelka.svg" alt="стрелка">
+          <img class="resourses__logo" src="images/logo/resources-polka.svg" alt="полка">
+        </div>
+      </section>
 
     </main>
 
