--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </section>
 
       <section class="oakley">
-        <article class="two-columns">
+        <div class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
@@ -104,7 +104,7 @@
               глубже, чем у тех, кому всё ясно с первого взгляда.
             </p>
           </div>
-        </article>
+        </div>
       </section>
 
       <section class="feynman">
@@ -255,10 +255,18 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="арзамас">
-          <img class="resources__logo" src="images/logo/resources-n1.svg" alt="н1">
-          <img class="resources__logo" src="images/logo/resources-strelka.svg" alt="стрелка">
-          <img class="resources__logo" src="images/logo/resources-polka.svg" alt="полка">
+          <a class="resources__link link" href="#">
+            <img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="арзамас">
+          </a>
+          <a class="resources__link link" href="#">
+            <img class="resources__logo" src="images/logo/resources-n1.svg" alt="н1">
+          </a>
+          <a class="resources__link link" href="#">
+            <img class="resources__logo" src="images/logo/resources-strelka.svg" alt="стрелка">
+          </a>
+          <a class="resources__link link" href="#">
+            <img class="resources__logo" src="images/logo/resources-polka.svg" alt="полка">
+          </a>
         </div>
       </section>
     </main>
